Fix a few firefox layout issues

--- a/issues/static/css/issues.css
+++ b/issues/static/css/issues.css
@@ -393,9 +393,7 @@
 }
 
 .label-context-menu .label-colour input {
-	float: left;
-	visibility: hidden;
-	width: 0;
+	display: none;
 }
 
 .label-context-menu .label-colour label {
